Closed Bug 452143 Opened 18 years ago Closed 18 years ago

Phone Number being displayed wrongly in integrated Apple Addressbook

Categories

(MailNews Core :: Address Book, defect, P4)

PowerPC
macOS
defect

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0a3

People

(Reporter: brian, Assigned: standard8)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-GB; rv:1.9.0.1) Gecko/2008070206 Firefox/3.0.1 Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a2pre) Gecko/20080825042741 Shredder/3.0b1pre In the OSX Address Book there are several values one can choose for the phone number field. Work, Home, Mobile, Main, Home Fax, Work Fax, Pager, Other are the preset ones available. If the "tag" is changed from it's initial value (when Thunderbird started), the Thunderbird Addressbook will list the same number in two tags - the old one, and the new one. This is only cleared up by restarting thunderbird, probably causing the addressbook to sync freshly. Reproducible: Always Steps to Reproduce: 1. Start Thunderbird 2. Change Phone Number from "mobile" to "work" (number stays the same, just the "tag" of number is changed) Actual Results: Number formerly under "mobile" now appears as "mobile" as well as "work". Expected Results: Number should only be appearing under "work".
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P4
Product: Thunderbird → MailNews Core
QA Contact: address-book → addressbook
Target Milestone: --- → Thunderbird 3.0b2
Version: unspecified → Trunk
Assignee: nobody → bugzilla
Attached patch The fix — — Splinter Review
The problem here is that if the item is part of a multi-valued field in the OS X address book, and that item is effectively removed (e.g. by deleting the value in the OS X address book, or changing it to a different label), then we're not detecting that and hence not resetting our value. This patch fixes that. The const addition on the attribute lets me use EmptyString().
Attachment #338547 - Flags: superreview?(bienvenu)
Attachment #338547 - Flags: review?(bienvenu)
Attachment #338547 - Flags: superreview?(bienvenu)
Attachment #338547 - Flags: superreview+
Attachment #338547 - Flags: review?(bienvenu)
Attachment #338547 - Flags: review+
Checked in, changeset id: 336:53edb60f5629 Note, I've filed bug 455240 to deal with an issue where we're not updating the card preview pane when we get updates from external apps.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: Thunderbird 3.0b2 → Thunderbird 3.0b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: