Bug 452143 Phone Number being displayed wrongly in integrated Apple Addressbook. r/sr=bienvenu